
========================
jose - 1.5 Release Notes
========================

hrimfaxi.bitbucket.io/jose


==================
Files for Download
==================

* jose-152-windows.zip              zip archive for Windows
* jose-152-linux.zip                zip archive for Linux with Intel processors
* jose-152-mac-intel.zip            zip archive for macOS with Intel processors
* jose-152-mac-arm.zip              zip archive for macOS wiht Apple Silicon (ARM 64) processors

* jose-153-patch.zip                patch to be applied on top of 1.5.2

* database-10k.jose                Database containing 10.000 grandmaster games
* database-500k.jose               Database containing more than 500.000 games
* database-1700k.jose              Database containing more than 1.7 million games



============
Requirements
============

* Operating Systems: 
   - Windows 98 or later
   - Linux with Intel processors
   - macOS with Intel or Apple Silicon (since?)

==================
Patch Installation
==================

* Patches are light-weight zip packages that can be installed on-top-of a full installation
* just unzip and replace the old files
* patches are platform-agnostic and cumulative (i.e. you need only the latest patch)


====================
Windows Installation
====================

* Unpack the zip file into a directory of your choice

* You can start jose by double-clicking "jose.exe"
  or you can start it from the command line with
     java -jar jose.jar

* jose includes a number of TrueType fonts for displaying chess figurines.
  If you like to use these fonts with other applications,
  copy them from jose\fonts to C:\Windows\Fonts


==================
Linux Installation
==================

* Unpack the zip file into a directory of your choice, e.g.
     unzip -D /usr/share/games jose-142-linux.zip

* Start jose with the script "jose.sh"
  or you can start it from the command line with
     java -jar jose.jar
