@@ -36,6 +36,6 @@ main = de.jose.Main
 splash = images\splash.bmp
 splash = "Version 1.5.3"
 splash = "Copyright 2002-25 Peter Schäfer"
-splash = "hrimfaxi.bitbucket.io/jose"
+splash = "peteschaefer.github.io/jose"
 
 
