@@ -3,6 +3,7 @@
 jose - 1.5 Release Notes
 ========================
 
+peteschaefer.github.io/jose
 hrimfaxi.bitbucket.io/jose
 
 
